link to font awesome

--- a/Portfolio-1/index.html
+++ b/Portfolio-1/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Karabo Rithuri</title>
-
+    <!--Font awesome-->
+    <script src="https://kit.fontawesome.com/a95ab3e3ec.js" crossorigin="anonymous"></script>
     <!--Link to CSS-->
     <link rel="stylesheet" href="css/style.css">
 </head>
