--- a/Portfolio-1/index.html
+++ b/Portfolio-1/index.html
@@ -10,7 +10,30 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <!--Start of main container-->
+    <div class="main-container">
+        <!--Start of side bar-->
+        <div class="side-bar">
+            <div class="logo">
+                <a href=""><span>K</span>arabo</a>
+            </div>
+            
+        </div>
+        <!--End of side bar-->
+
+        <!--Start of main content-->
+        <div class="main-content">
+            <!--Start of home section-->
+            <section class="home section">
+                Home
+            </section>
+            <!--End of main section-->
+        </div>
+        <!--End of main content-->
+    </div>
+    <!--End of main container-->
+
+
     <!--Link to JavaScript-->
     <script src="script.js"></script>
 </body>
