--- a/Portfolio-1/index.html
+++ b/Portfolio-1/index.html
@@ -15,9 +15,15 @@
         <!--Start of side bar-->
         <div class="side-bar">
             <div class="logo">
-                <a href=""><span>K</span>arabo</a>
+                <a href="#"><span>K</span>arabo</a>
             </div>
-            
+            <ul class="nav">
+                <li><a href="#" class="active"><i class="fa fa-home"></i></a></li>
+                <li><a href="#"><i class="fa fa-user"></i>About</a></li>
+                <li><a href="#"><i class="fa fa-list"></i>Services</a></li>
+                <li><a href="#"><i class="fa fa-briefcase"></i>Portfolio</a></li>
+                <li><a href="#"><i class="fa fa-comments"></i>Contact</a></li>
+            </ul>
         </div>
         <!--End of side bar-->
 
