--- a/Portfolio-1/index.html
+++ b/Portfolio-1/index.html
@@ -8,6 +8,7 @@
     <script src="https://kit.fontawesome.com/a95ab3e3ec.js" crossorigin="anonymous"></script>
     <!--Link to CSS-->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/colors.css">
 </head>
 <body>
     <!--Start of main container-->
@@ -17,8 +18,11 @@
             <div class="logo">
                 <a href="#"><span>K</span>arabo</a>
             </div>
+            <div class="nav-toggler">
+                <span></span>
+            </div>
             <ul class="nav">
-                <li><a href="#" class="active"><i class="fa fa-home"></i></a></li>
+                <li><a href="#" class="active"><i class="fa fa-home"></i>Home</a></li>
                 <li><a href="#"><i class="fa fa-user"></i>About</a></li>
                 <li><a href="#"><i class="fa fa-list"></i>Services</a></li>
                 <li><a href="#"><i class="fa fa-briefcase"></i>Portfolio</a></li>
