--- a/Portfolio-1/index.html
+++ b/Portfolio-1/index.html
@@ -34,23 +34,35 @@
         <!--Start of main content-->
         <div class="main-content">
             <!--Start of home section-->
-            <section class="home section">
+            <section class="home section hidden">
                 <div class="container">
                     <div class="row">
-                       <div class="home-info">
+                       <div class="home-info padd-15">
                         <h3 class="hello">Hello, my name is <span class="name">Karabo Rithuri</span></h3>
                         <h3 class="my-profession">I'm a <span class="typing">back-end developer</span></h3>
-                        <p>I'm  a Bcom in Information Systems undergraduate, currently in my 3rd year. My tech stack is Python, C#, Java, HTML, CSS, JavaScript, Git and GitHub.</p><br>
-                        <p>With the skills I obtained from studying Bcom in Information Systems, I aim to not only boost business innovation and efficiency, but to also solve problems that South Africa faces currently and will still face in the future using technology. </p>
+                        <p>I'm  a Bcom in Information Systems undergraduate, currently in my 3rd year. My tech stack is Python, C#, Java, HTML, CSS, JavaScript, Git and GitHub.<br><br>
+                        With the skills I obtained from studying Bcom in Information Systems, I aim to not only boost business innovation and efficiency, but to also solve problems that South Africa faces currently and will still face in the future using technology. </p>
                         <a href="#contact" class="btn hire-me">Hire Me</a>
                        </div>
-                       <div class="home-img">
+                       <div class="home-img padd-15">
                         <img src="images/Profile.JPG" alt="">
                        </div>
                     </div>
                 </div>
             </section>
-            <!--End of main section-->
+            <!--End of home section-->
+            <!--About section start-->
+            <section class="about section">
+                <div class="container">
+                    <div class="row">
+                        <div class="section-title padd-15">
+                            <h2>About Me</h2>
+                        </div>
+                    </div>
+                    
+                </div>
+            </section>
+            <!--About section end-->
         </div>
         <!--End of main content-->
     </div>
