--- a/Portfolio-1/index.html
+++ b/Portfolio-1/index.html
@@ -59,7 +59,14 @@
                             <h2>About Me</h2>
                         </div>
                     </div>
-                    
+                <div class="row">
+                    <div class="about-content padd-15">
+                        <div class="about-text">
+                            <h3>I'm Karabo Rithuri and <span>Backend Developer</span></h3>
+                            <p>I'm a Bcom in Information System Undergraduate at the University of Johannesburg, currently in my 3rd year. My a,bitions in software engineering are to be use technology to boost business innovation and efficiency.<br><br>Throughout my academic journey, I have studied software development, project management, business management, and information systems as part of my Bcom in Information Systems curriculum.</p>
+                        </div>
+                    </div>
+                </div>    
                 </div>
             </section>
             <!--About section end-->
