--- a/Portfolio-1/index.html
+++ b/Portfolio-1/index.html
@@ -1,82 +1,149 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Karabo Rithuri</title>
     <!--Font awesome-->
-    <script src="https://kit.fontawesome.com/a95ab3e3ec.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/a95ab3e3ec.js"
+      crossorigin="anonymous"
+    ></script>
     <!--Link to CSS-->
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/colors.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/colors.css" />
+  </head>
+  <body>
     <!--Start of main container-->
     <div class="main-container">
-        <!--Start of side bar-->
-        <div class="side-bar">
-            <div class="logo">
-                <a href="#"><span>K</span>arabo</a>
-            </div>
-            <div class="nav-toggler">
-                <span></span>
-            </div>
-            <ul class="nav">
-                <li><a href="#" class="active"><i class="fa fa-home"></i>Home</a></li>
-                <li><a href="#"><i class="fa fa-user"></i>About</a></li>
-                <li><a href="#"><i class="fa fa-list"></i>Services</a></li>
-                <li><a href="#"><i class="fa fa-briefcase"></i>Portfolio</a></li>
-                <li><a href="#"><i class="fa fa-comments"></i>Contact</a></li>
-            </ul>
+      <!--Start of side bar-->
+      <div class="side-bar">
+        <div class="logo">
+          <a href="#"><span>K</span>arabo</a>
         </div>
-        <!--End of side bar-->
+        <div class="nav-toggler">
+          <span></span>
+        </div>
+        <ul class="nav">
+          <li>
+            <a href="#" class="active"><i class="fa fa-home"></i>Home</a>
+          </li>
+          <li>
+            <a href="#"><i class="fa fa-user"></i>About</a>
+          </li>
+          <li>
+            <a href="#"><i class="fa fa-list"></i>Services</a>
+          </li>
+          <li>
+            <a href="#"><i class="fa fa-briefcase"></i>Portfolio</a>
+          </li>
+          <li>
+            <a href="#"><i class="fa fa-comments"></i>Contact</a>
+          </li>
+        </ul>
+      </div>
+      <!--End of side bar-->
 
-        <!--Start of main content-->
-        <div class="main-content">
-            <!--Start of home section-->
-            <section class="home section hidden">
-                <div class="container">
-                    <div class="row">
-                       <div class="home-info padd-15">
-                        <h3 class="hello">Hello, my name is <span class="name">Karabo Rithuri</span></h3>
-                        <h3 class="my-profession">I'm a <span class="typing">back-end developer</span></h3>
-                        <p>I'm  a Bcom in Information Systems undergraduate, currently in my 3rd year. My tech stack is Python, C#, Java, HTML, CSS, JavaScript, Git and GitHub.<br><br>
-                        With the skills I obtained from studying Bcom in Information Systems, I aim to not only boost business innovation and efficiency, but to also solve problems that South Africa faces currently and will still face in the future using technology. </p>
-                        <a href="#contact" class="btn hire-me">Hire Me</a>
-                       </div>
-                       <div class="home-img padd-15">
-                        <img src="images/Profile.JPG" alt="">
-                       </div>
-                    </div>
-                </div>
-            </section>
-            <!--End of home section-->
-            <!--About section start-->
-            <section class="about section">
-                <div class="container">
-                    <div class="row">
-                        <div class="section-title padd-15">
-                            <h2>About Me</h2>
-                        </div>
-                    </div>
+      <!--Start of main content-->
+      <div class="main-content">
+        <!--Start of home section-->
+        <section class="home section hidden">
+          <div class="container">
+            <div class="row">
+              <div class="home-info padd-15">
+                <h3 class="hello">
+                  Hello, my name is <span class="name">Karabo Rithuri</span>
+                </h3>
+                <h3 class="my-profession">
+                  I'm a <span class="typing">back-end developer</span>
+                </h3>
+                <p>
+                  I'm a Bcom in Information Systems undergraduate, currently in
+                  my 3rd year. My tech stack is Python, C#, Java, HTML, CSS,
+                  JavaScript, Git and GitHub.<br /><br />
+                  With the skills I obtained from studying Bcom in Information
+                  Systems, I aim to not only boost business innovation and
+                  efficiency, but to also solve problems that South Africa faces
+                  currently and will still face in the future using technology.
+                </p>
+                <a href="#contact" class="btn hire-me">Hire Me</a>
+              </div>
+              <div class="home-img padd-15">
+                <img src="images/Profile.JPG" alt="" />
+              </div>
+            </div>
+          </div>
+        </section>
+        <!--End of home section-->
+        <!--About section start-->
+        <section class="about section">
+          <div class="container">
+            <div class="row">
+              <div class="section-title padd-15">
+                <h2>About Me</h2>
+              </div>
+            </div>
+            <div class="row">
+              <div class="about-content padd-15">
                 <div class="row">
-                    <div class="about-content padd-15">
-                        <div class="about-text">
-                            <h3>I'm Karabo Rithuri and <span>Backend Developer</span></h3>
-                            <p>I'm a Bcom in Information System Undergraduate at the University of Johannesburg, currently in my 3rd year. My a,bitions in software engineering are to be use technology to boost business innovation and efficiency.<br><br>Throughout my academic journey, I have studied software development, project management, business management, and information systems as part of my Bcom in Information Systems curriculum.</p>
+                  <div class="about-text">
+                    <h3>
+                      I'm Karabo Rithuri and <span>Backend Developer</span>
+                    </h3>
+                    <p>
+                      I'm a Bcom in Information System Undergraduate at the
+                      University of Johannesburg, currently in my 3rd year. My
+                      a,bitions in software engineering are to be use technology
+                      to boost business innovation and efficiency.<br /><br />Throughout
+                      my academic journey, I have studied software development,
+                      project management, business management, and information
+                      systems as part of my Bcom in Information Systems
+                      curriculum.
+                    </p>
+                  </div>
+                </div>
+                <div class="row">
+                    <div class="personal-info padd-15">
+                        <div class="row">
+                            <div class="info-item">
+                                <p>Birthday : <span>09 Dec 1999</span></p>
+                            </div>
+                            <div class="info-item">
+                                <p>Age : <span>24</span></p>
+                            </div>
+                            <div class="info-item">
+                                <p>GitHub : <span>https://github.com/KRithuri</span></p>
+                            </div>
+                            <div class="info-item">
+                                <p>Email : <span>rithurikarabo@gmail.com</span></p>
+                            </div>
+                            <div class="info-item">
+                                <p>Degree : <span>Bcom in Information Systems (ongoing)</span></p>
+                            </div>
+                            <div class="info-item">
+                                <p>Degree : <span>Bcom in Business Management</span></p>
+                            </div>
+                            <div class="info-item">
+                                <p>Phone : <span>+27 79 317 8960</span></p>
+                            </div>
+                            <div class="info-item">
+                                <p>City : <span>Pretoria</span></p>
+                            </div>
                         </div>
                     </div>
-                </div>    
+                    <div class="skills padd-15">Skills</div>
                 </div>
-            </section>
-            <!--About section end-->
-        </div>
-        <!--End of main content-->
+              </div>
+            </div>
+          </div>
+        </section>
+        <!--About section end-->
+      </div>
+      <!--End of main content-->
     </div>
     <!--End of main container-->
 
-
     <!--Link to JavaScript-->
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
