--- a/Portfolio-1/index.html
+++ b/Portfolio-1/index.html
@@ -142,7 +142,7 @@
                             <div class="skill-item padd-15">
                                 <h5>Python</h5>
                                 <div class="progress">
-                                    <div class="progress--in" style="width: 90%;"></div>
+                                    <div class="progress-in" style="width: 90%;"></div>
                                     <div class="skill-percentage">90%</div>
                                 </div>
                             </div>
@@ -150,7 +150,7 @@
                             <div class="skill-item padd-15">
                                 <h5>C#</h5>
                                 <div class="progress">
-                                    <div class="progress--in" style="width: 70%;"></div>
+                                    <div class="progress-in" style="width: 70%;"></div>
                                     <div class="skill-percentage">70%</div>
                                 </div>
                             </div>
@@ -158,7 +158,7 @@
                             <div class="skill-item padd-15">
                                 <h5>Java</h5>
                                 <div class="progress">
-                                    <div class="progress--in" style="width: 40%;"></div>
+                                    <div class="progress-in" style="width: 40%;"></div>
                                     <div class="skill-percentage">40%</div>
                                 </div>
                             </div>
@@ -166,7 +166,7 @@
                             <div class="skill-item padd-15">
                                 <h5>JavaScript</h5>
                                 <div class="progress">
-                                    <div class="progress--in" style="width: 65%;"></div>
+                                    <div class="progress-in" style="width: 65%;"></div>
                                     <div class="skill-percentage">65%</div>
                                 </div>
                             </div>
@@ -174,7 +174,7 @@
                             <div class="skill-item padd-15">
                                 <h5>MySQL</h5>
                                 <div class="progress">
-                                    <div class="progress--in" style="width: 85%;"></div>
+                                    <div class="progress-in" style="width: 85%;"></div>
                                     <div class="skill-percentage">85%</div>
                                 </div>
                             </div>
@@ -182,7 +182,7 @@
                             <div class="skill-item padd-15">
                                 <h5>HTML</h5>
                                 <div class="progress">
-                                    <div class="progress--in" style="width: 90%;"></div>
+                                    <div class="progress-in" style="width: 90%;"></div>
                                     <div class="skill-percentage">85%</div>
                                 </div>
                             </div>
@@ -190,7 +190,7 @@
                             <div class="skill-item padd-15">
                                 <h5>CSS</h5>
                                 <div class="progress">
-                                    <div class="progress--in" style="width: 80%;"></div>
+                                    <div class="progress-in" style="width: 80%;"></div>
                                     <div class="skill-percentage">80%</div>
                                 </div>
                             </div>
