--- a/Portfolio-1/index.html
+++ b/Portfolio-1/index.html
@@ -103,99 +103,150 @@
                   </div>
                 </div>
                 <div class="row">
-                    <div class="personal-info padd-15">
-                        <div class="row">
-                            <div class="info-item padd-15">
-                                <p>Birthday : <span>09 Dec 1999</span></p>
-                            </div>
-                            <div class="info-item padd-15">
-                                <p>Age : <span>24</span></p>
-                            </div>
-                            <div class="info-item padd-15">
-                                <p>GitHub : <span>https://github.com/KRithuri</span></p>
-                            </div>
-                            <div class="info-item padd-15">
-                                <p>Email : <span>rithurikarabo@gmail.com</span></p>
-                            </div>
-                            <div class="info-item padd-15">
-                                <p>Degree : <span>Bcom in Information Systems (ongoing)</span></p>
-                            </div>
-                            <div class="info-item padd-15">
-                                <p>Degree : <span>Bcom in Business Management</span></p>
-                            </div>
-                            <div class="info-item padd-15">
-                                <p>Phone : <span>+27 79 317 8960</span></p>
-                            </div>
-                            <div class="info-item padd-15">
-                                <p>City : <span>Pretoria</span></p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="buttons padd-15">
-                                <a href="#" class="btn">Download CV</a>
-                                <a href="#contact" class="btn hire-me">Hire Me</a>
-                            </div>
-                        </div>
+                  <div class="personal-info padd-15">
+                    <div class="row">
+                      <div class="info-item padd-15">
+                        <p>Birthday : <span>09 Dec 1999</span></p>
+                      </div>
+                      <div class="info-item padd-15">
+                        <p>Age : <span>24</span></p>
+                      </div>
+                      <div class="info-item padd-15">
+                        <p>GitHub : <span>https://github.com/KRithuri</span></p>
+                      </div>
+                      <div class="info-item padd-15">
+                        <p>Email : <span>rithurikarabo@gmail.com</span></p>
+                      </div>
+                      <div class="info-item padd-15">
+                        <p>
+                          Degree :
+                          <span>Bcom in Information Systems (ongoing)</span>
+                        </p>
+                      </div>
+                      <div class="info-item padd-15">
+                        <p>Degree : <span>Bcom in Business Management</span></p>
+                      </div>
+                      <div class="info-item padd-15">
+                        <p>Phone : <span>+27 79 317 8960</span></p>
+                      </div>
+                      <div class="info-item padd-15">
+                        <p>City : <span>Pretoria</span></p>
+                      </div>
                     </div>
-                    <div class="skills padd-15">
-                        <div class="row">
-                            <div class="skill-item padd-15">
-                                <h5>Python</h5>
-                                <div class="progress">
-                                    <div class="progress-in" style="width: 90%;"></div>
-                                    <div class="skill-percentage">90%</div>
-                                </div>
-                            </div>
-                            <!--CSS-->
-                            <div class="skill-item padd-15">
-                                <h5>C#</h5>
-                                <div class="progress">
-                                    <div class="progress-in" style="width: 70%;"></div>
-                                    <div class="skill-percentage">70%</div>
-                                </div>
-                            </div>
-                            <!--Java-->
-                            <div class="skill-item padd-15">
-                                <h5>Java</h5>
-                                <div class="progress">
-                                    <div class="progress-in" style="width: 40%;"></div>
-                                    <div class="skill-percentage">40%</div>
-                                </div>
-                            </div>
-                            <!--JavaScript-->
-                            <div class="skill-item padd-15">
-                                <h5>JavaScript</h5>
-                                <div class="progress">
-                                    <div class="progress-in" style="width: 65%;"></div>
-                                    <div class="skill-percentage">65%</div>
-                                </div>
-                            </div>
-                            <!--MySQL-->
-                            <div class="skill-item padd-15">
-                                <h5>MySQL</h5>
-                                <div class="progress">
-                                    <div class="progress-in" style="width: 85%;"></div>
-                                    <div class="skill-percentage">85%</div>
-                                </div>
-                            </div>
-                            <!--HTML-->
-                            <div class="skill-item padd-15">
-                                <h5>HTML</h5>
-                                <div class="progress">
-                                    <div class="progress-in" style="width: 90%;"></div>
-                                    <div class="skill-percentage">85%</div>
-                                </div>
-                            </div>
-                            <!--CSS-->
-                            <div class="skill-item padd-15">
-                                <h5>CSS</h5>
-                                <div class="progress">
-                                    <div class="progress-in" style="width: 80%;"></div>
-                                    <div class="skill-percentage">80%</div>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="row">
+                      <div class="buttons padd-15">
+                        <a href="#" class="btn">Download CV</a>
+                        <a href="#contact" class="btn hire-me">Hire Me</a>
+                      </div>
                     </div>
+                  </div>
+                  <div class="skills padd-15">
+                    <div class="row">
+                      <div class="skill-item padd-15">
+                        <h5>Python</h5>
+                        <div class="progress">
+                          <div class="progress-in" style="width: 90%"></div>
+                          <div class="skill-percentage">90%</div>
+                        </div>
+                      </div>
+                      <!--CSS-->
+                      <div class="skill-item padd-15">
+                        <h5>C#</h5>
+                        <div class="progress">
+                          <div class="progress-in" style="width: 70%"></div>
+                          <div class="skill-percentage">70%</div>
+                        </div>
+                      </div>
+                      <!--Java-->
+                      <div class="skill-item padd-15">
+                        <h5>Java</h5>
+                        <div class="progress">
+                          <div class="progress-in" style="width: 40%"></div>
+                          <div class="skill-percentage">40%</div>
+                        </div>
+                      </div>
+                      <!--JavaScript-->
+                      <div class="skill-item padd-15">
+                        <h5>JavaScript</h5>
+                        <div class="progress">
+                          <div class="progress-in" style="width: 65%"></div>
+                          <div class="skill-percentage">65%</div>
+                        </div>
+                      </div>
+                      <!--MySQL-->
+                      <div class="skill-item padd-15">
+                        <h5>MySQL</h5>
+                        <div class="progress">
+                          <div class="progress-in" style="width: 85%"></div>
+                          <div class="skill-percentage">85%</div>
+                        </div>
+                      </div>
+                      <!--HTML-->
+                      <div class="skill-item padd-15">
+                        <h5>HTML</h5>
+                        <div class="progress">
+                          <div class="progress-in" style="width: 90%"></div>
+                          <div class="skill-percentage">85%</div>
+                        </div>
+                      </div>
+                      <!--CSS-->
+                      <div class="skill-item padd-15">
+                        <h5>CSS</h5>
+                        <div class="progress">
+                          <div class="progress-in" style="width: 80%"></div>
+                          <div class="skill-percentage">80%</div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <!--Education section-->
+                  <div class="education padd-15">
+                    <h3 class="title">Education</h3>
+                    <div class="row">
+                      <div class="timeline-box padd-15">
+                        <div class="timeline shadow-dark">
+                          <!--Education timeline-->
+                          <div class="timeline-item">
+                            <div class="circle-dot">
+                              <h3 class="timeline-date">
+                                <i class="fa fa-calendar"></i>2022 - 2024
+                              </h3>
+                              <h4 class="timeline-title">
+                                Bcom in Information Systems
+                              </h4>
+                              <p class="timeline-text">
+                                Majors: Software Development | Information
+                                Systems | Database Management | Business
+                                Management
+                              </p>
+                            </div>
+                          </div>
+                          <!--Education timeline-->
+                          <div class="timeline-item">
+                            <div class="circle-dot">
+                              <h3 class="timeline-date">
+                                <i class="fa fa-calendar"></i>2018 - 2021
+                              </h3>
+                              <h4 class="timeline-title">
+                                Bcom in Business Management
+                              </h4>
+                              <p class="timeline-text">
+                                Majors: Business Management | Business Analytics
+                                | Financial Management | Internal Audits |
+                                Taxation | Project Management
+                              </p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <!--Experience-->
+                  <div class="experience padd-15">
+                    <h3 class="title">Experience</h3>
+                  </div>
                 </div>
               </div>
             </div>
