--- a/Portfolio-1/index.html
+++ b/Portfolio-1/index.html
@@ -209,35 +209,33 @@
                         <div class="timeline shadow-dark">
                           <!--Education timeline-->
                           <div class="timeline-item">
-                            <div class="circle-dot">
-                              <h3 class="timeline-date">
-                                <i class="fa fa-calendar"></i>2022 - 2024
-                              </h3>
-                              <h4 class="timeline-title">
+                            <div class="circle-dot"></div>
+                            <h3 class="timeline-date">
+                              <i class="fa fa-calendar"></i>2022 - 2024
+                            </h3>
+                            <h4 class="timeline-title">
                                 Bcom in Information Systems
-                              </h4>
-                              <p class="timeline-text">
+                            </h4>
+                            <p class="timeline-text">
                                 Majors: Software Development | Information
                                 Systems | Database Management | Business
                                 Management
                               </p>
-                            </div>
                           </div>
                           <!--Education timeline-->
                           <div class="timeline-item">
-                            <div class="circle-dot">
-                              <h3 class="timeline-date">
-                                <i class="fa fa-calendar"></i>2018 - 2021
-                              </h3>
-                              <h4 class="timeline-title">
+                            <div class="circle-dot"></div>
+                            <h3 class="timeline-date">
+                              <i class="fa fa-calendar"></i>2018 - 2021
+                            </h3>
+                            <h4 class="timeline-title">
                                 Bcom in Business Management
-                              </h4>
-                              <p class="timeline-text">
+                            </h4>
+                            <p class="timeline-text">
                                 Majors: Business Management | Business Analytics
                                 | Financial Management | Internal Audits |
                                 Taxation | Project Management
-                              </p>
-                            </div>
+                            </p>
                           </div>
                         </div>
                       </div>
