--- a/Portfolio-1/index.html
+++ b/Portfolio-1/index.html
@@ -47,7 +47,7 @@
       <!--Start of main content-->
       <div class="main-content">
         <!--Start of home section-->
-        <section class="home section hidden">
+        <section class="home section">
           <div class="container">
             <div class="row">
               <div class="home-info padd-15">
@@ -214,13 +214,12 @@
                               <i class="fa fa-calendar"></i>2022 - 2024
                             </h3>
                             <h4 class="timeline-title">
-                                Bcom in Information Systems
+                              Bcom in Information Systems
                             </h4>
                             <p class="timeline-text">
-                                Majors: Software Development | Information
-                                Systems | Database Management | Business
-                                Management
-                              </p>
+                              Majors: Software Development | Information Systems
+                              | Database Management | Business Management
+                            </p>
                           </div>
                           <!--Education timeline-->
                           <div class="timeline-item">
@@ -229,12 +228,12 @@
                               <i class="fa fa-calendar"></i>2018 - 2021
                             </h3>
                             <h4 class="timeline-title">
-                                Bcom in Business Management
+                              Bcom in Business Management
                             </h4>
                             <p class="timeline-text">
-                                Majors: Business Management | Business Analytics
-                                | Financial Management | Internal Audits |
-                                Taxation | Project Management
+                              Majors: Business Management | Business Analytics |
+                              Financial Management | Internal Audits | Taxation
+                              | Project Management
                             </p>
                           </div>
                         </div>
@@ -244,6 +243,68 @@
                   <!--Experience-->
                   <div class="experience padd-15">
                     <h3 class="title">Experience</h3>
+                    <div class="row">
+                      <div class="timeline-box padd-15">
+                        <div class="timeline shadow-dark">
+                          <!--Education timeline-->
+                          <div class="timeline-item">
+                            <div class="circle-dot"></div>
+                            <h3 class="timeline-date">
+                              <i class="fa fa-calendar"></i>Apr 2021 - Sep 2023
+                            </h3>
+                            <h4 class="timeline-title">
+                              Liaison | Care For Education
+                            </h4>
+                            <p class="timeline-text">
+                              Worked as a liaison on a part-time basis between
+                              the company and the schools involved in the
+                              project.<br />My duties were to visit schools on
+                              training days, check if schools have set up the
+                              training center properly, help with training when
+                              trainers are short-staffed, check and make sure
+                              that learners understand the content, compile and
+                              upload registers, assist in getting learners for
+                              competitions and provide a monthlu report to the
+                              company about my visits.
+                            </p>
+                          </div>
+                          <!--Education timeline-->
+                          <div class="timeline-item">
+                            <div class="circle-dot"></div>
+                            <h3 class="timeline-date">
+                              <i class="fa fa-calendar"></i>Nov 2022 - Mar 2023
+                            </h3>
+                            <h4 class="timeline-title">
+                              Intern | Hands On Technologies
+                            </h4>
+                            <p class="timeline-text">
+                              Worked as an intern. My duties were to assist in
+                              robotics training, assist in the warehouse, assist
+                              in getting orders ready, sorting LEGO pieces and
+                              assisting in WRO competition preparations.
+                            </p>
+                          </div>
+                          <!--Education timeline-->
+                          <div class="timeline-item">
+                            <div class="circle-dot"></div>
+                            <h3 class="timeline-date">
+                              <i class="fa fa-calendar"></i>Jun 2015 - Apr 2021
+                            </h3>
+                            <h4 class="timeline-title">
+                              Robotics Trainer | Care For Education
+                            </h4>
+                            <p class="timeline-text">
+                              Worked as arobotics trainer in primary and high
+                              schools on a part time basis. My duties were to
+                              provide robotics training to learners, assist with
+                              refereeing at competitions (WRO & Township
+                              Robotics) and to assist in getting learners ready
+                              for competitions.
+                            </p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
