--- a/Portfolio-1/index.html
+++ b/Portfolio-1/index.html
@@ -31,9 +31,9 @@
           <li>
             <a href="#"><i class="fa fa-user"></i>About</a>
           </li>
-          <li>
+          <!-- <li>
             <a href="#"><i class="fa fa-list"></i>Services</a>
-          </li>
+          </li> -->
           <li>
             <a href="#"><i class="fa fa-briefcase"></i>Portfolio</a>
           </li>
@@ -47,7 +47,7 @@
       <!--Start of main content-->
       <div class="main-content">
         <!--Start of home section-->
-        <section class="home section">
+        <section class="home section hidden">
           <div class="container">
             <div class="row">
               <div class="home-info padd-15">
@@ -76,7 +76,7 @@
         </section>
         <!--End of home section-->
         <!--About section start-->
-        <section class="about section">
+        <section class="about section hidden">
           <div class="container">
             <div class="row">
               <div class="section-title padd-15">
@@ -312,6 +312,23 @@
           </div>
         </section>
         <!--About section end-->
+
+       <!--Portfolio section start-->
+        <section class="portfolio section">
+          <div class="container">
+            <div class="row">
+              <div class="section-title padd-15">
+                <h2>Portfolio</h2>
+              </div>
+            </div>
+            <div class="row">
+              <div class="portfolio-heading padd-15">
+                <h2>My Last Projects:</h2>
+              </div>
+            </div>
+          </div>
+        </section>
+       <!--Portfolio section end-->
       </div>
       <!--End of main content-->
     </div>
