--- a/Portfolio-1/index.html
+++ b/Portfolio-1/index.html
@@ -314,7 +314,7 @@
         <!--About section end-->
 
        <!--Portfolio section start-->
-        <section class="portfolio section">
+        <section class="portfolio section hidden">
           <div class="container">
             <div class="row">
               <div class="section-title padd-15">
@@ -340,6 +340,20 @@
           </div>
         </section>
        <!--Portfolio section end-->
+
+       <!--Contact section start-->
+        <section class="contact section">
+          <div class="container">
+            <div class="row">
+              <div class="section-section padd-15">
+                <h2>Contact Me</h2>
+              </div>
+            </div>
+            <h3 class="contact-title">Do You Have Any Questions ?</h3>
+            <h4 class="contact-sub-title">I'M AT YOUR SERVICES</h4>
+          </div>
+        </section>
+       <!--Contact section end-->
       </div>
       <!--End of main content-->
     </div>
