--- a/Portfolio-1/index.html
+++ b/Portfolio-1/index.html
@@ -351,6 +351,31 @@
             </div>
             <h3 class="contact-title">Do You Have Any Questions ?</h3>
             <h4 class="contact-sub-title">I'M AT YOUR SERVICES</h4>
+            <div class="row">
+              <!--Contact info item start-->
+              <div class="contact-info-item padd-15">
+                <div class="icon"><i class="fa fa-phone"></i></div>
+                <h4>Call Me On</h4>
+                <p>+27 79 317 8960</p>
+              </div>
+              <!--Contact info item end-->
+
+              <!--Contact info item start-->
+              <div class="contact-info-item padd-15">
+                <div class="icon"><i class="fa fa-envelope"></i></div>
+                <h4>Email</h4>
+                <p>rithurikarabo@gmail.com</p>
+              </div>
+              <!--Contact info item end-->
+
+              <!--Contact info item start-->
+              <div class="contact-info-item padd-15">
+                <div class="icon"><i class="fa fa-github"></i></div>
+                <h4>GitHub</h4>
+                <p>https://github.com/KRithuri</p>
+              </div>
+              <!--Contact info item end-->
+            </div>
           </div>
         </section>
        <!--Contact section end-->
