--- a/Portfolio-1/index.html
+++ b/Portfolio-1/index.html
@@ -313,7 +313,7 @@
         </section>
         <!--About section end-->
 
-       <!--Portfolio section start-->
+        <!--Portfolio section start-->
         <section class="portfolio section hidden">
           <div class="container">
             <div class="row">
@@ -331,7 +331,7 @@
               <div class="portfolio-item padd-15">
                 <div class="portfolio-item-inner shadow-dark">
                   <div class="portfolio-img">
-                    <img src="" alt="">
+                    <img src="" alt="" />
                   </div>
                 </div>
               </div>
@@ -339,9 +339,9 @@
             </div>
           </div>
         </section>
-       <!--Portfolio section end-->
+        <!--Portfolio section end-->
 
-       <!--Contact section start-->
+        <!--Contact section start-->
         <section class="contact section">
           <div class="container">
             <div class="row">
@@ -377,33 +377,52 @@
               <!--Contact info item end-->
             </div>
             <h3 class="contact-title padd-15">SEND ME AN EMAIL</h3>
-            <h4 class="contact-sub-title padd-15">I'M VERY RESPONSIVE TO MESSAGES</h4>
+            <h4 class="contact-sub-title padd-15">
+              I'M VERY RESPONSIVE TO MESSAGES
+            </h4>
             <!--Contact form-->
             <div class="row">
               <div class="contact-form padd-15">
                 <div class="row">
                   <div class="form-item col-6 padd-15">
                     <div class="form-group">
-                      <input type="text" class="form-control" placeholder="Name">
+                      <input
+                        type="text"
+                        class="form-control"
+                        placeholder="Name"
+                      />
                     </div>
                   </div>
                   <div class="form-item col-6 padd-15">
                     <div class="form-group">
-                      <input type="email" class="form-control" placeholder="Email">
+                      <input
+                        type="email"
+                        class="form-control"
+                        placeholder="Email"
+                      />
                     </div>
                   </div>
                 </div>
                 <div class="row">
                   <div class="form-item col-12 padd-15">
                     <div class="form-group">
-                      <input type="text" class="form-control" placeholder="Subject">
+                      <input
+                        type="text"
+                        class="form-control"
+                        placeholder="Subject"
+                      />
                     </div>
                   </div>
                 </div>
                 <div class="row">
                   <div class="form-item col-12 padd-15">
                     <div class="form-group">
-                      <textarea name="" class="form-control" id="" placeholder="Message"></textarea>
+                      <textarea
+                        name=""
+                        class="form-control"
+                        id=""
+                        placeholder="Message"
+                      ></textarea>
                     </div>
                   </div>
                 </div>
@@ -416,7 +435,7 @@
             </div>
           </div>
         </section>
-       <!--Contact section end-->
+        <!--Contact section end-->
       </div>
       <!--End of main content-->
     </div>
