--- a/Portfolio-1/index.html
+++ b/Portfolio-1/index.html
@@ -47,7 +47,7 @@
       <!--Start of main content-->
       <div class="main-content">
         <!--Start of home section-->
-        <section class="home section hidden">
+        <section class="home section ">
           <div class="container">
             <div class="row">
               <div class="home-info padd-15">
@@ -76,7 +76,7 @@
         </section>
         <!--End of home section-->
         <!--About section start-->
-        <section class="about section hidden">
+        <section class="about section">
           <div class="container">
             <div class="row">
               <div class="section-title padd-15">
@@ -345,7 +345,7 @@
         <section class="contact section">
           <div class="container">
             <div class="row">
-              <div class="section-section padd-15">
+              <div class="section-title padd-15">
                 <h2>Contact Me</h2>
               </div>
             </div>
@@ -440,6 +440,19 @@
       <!--End of main content-->
     </div>
     <!--End of main container-->
+
+    <!--Start of Style switcher-->
+    <div class="style-switcher">
+      <div class="style-switcher--toggler s-icon">
+        <i class="fas fa-cog fa-skin"></i>
+      </div>
+      <div class="day-night s-icon">
+        <i class="fas fa-moon"></i>
+      </div>
+      <h4>Theme Colors</h4>
+      
+    </div>
+    <!--End of Style Switcher-->
 
     <!--Link to JavaScript-->
     <script src="script.js"></script>
