--- a/Portfolio-1/index.html
+++ b/Portfolio-1/index.html
@@ -450,7 +450,9 @@
         <i class="fas fa-moon"></i>
       </div>
       <h4>Theme Colors</h4>
-      
+      <div class="colors">
+        <span class="color-1" onclick="setActiveStyle()"></span>
+      </div>
     </div>
     <!--End of Style Switcher-->
 
