link to style switcher

--- a/Portfolio-1/index.html
+++ b/Portfolio-1/index.html
@@ -11,7 +11,9 @@
     ></script>
     <!--Link to CSS-->
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/colors.css" />
+    <link rel="stylesheet" href="css/color-1.css" />
+    <!--Link to style switcher-->
+    <link rel="stylesheet" href="css/style-switcher.css">
   </head>
   <body>
     <!--Start of main container-->
@@ -444,7 +446,7 @@
     <!--Start of Style switcher-->
     <div class="style-switcher">
       <div class="style-switcher--toggler s-icon">
-        <i class="fas fa-cog fa-skin"></i>
+        <i class="fas fa-cog fa-spin"></i>
       </div>
       <div class="day-night s-icon">
         <i class="fas fa-moon"></i>
