--- a/Portfolio-1/index.html
+++ b/Portfolio-1/index.html
@@ -13,6 +13,11 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/color-1.css" />
     <!--Link to style switcher-->
+    <link rel="stylesheet" href="css/color-1.css" class="alternate-style" title="color-1" disabled/>
+    <link rel="stylesheet" href="css/color-2.css" class="alternate-style" title="color-2" disabled/>
+    <link rel="stylesheet" href="css/color-3.css" class="alternate-style" title="color-3" disabled/>
+    <link rel="stylesheet" href="css/color-4.css" class="alternate-style" title="color-4" disabled/>
+    <link rel="stylesheet" href="css/color-5.css" class="alternate-style" title="color-5" disabled/>
     <link rel="stylesheet" href="css/style-switcher.css">
   </head>
   <body>
