link to style switcher js file

--- a/Portfolio-1/index.html
+++ b/Portfolio-1/index.html
@@ -450,7 +450,7 @@
 
     <!--Start of Style switcher-->
     <div class="style-switcher">
-      <div class="style-switcher--toggler s-icon">
+      <div class="style-switcher-toggler s-icon">
         <i class="fas fa-cog fa-spin"></i>
       </div>
       <div class="day-night s-icon">
@@ -469,5 +469,6 @@
 
     <!--Link to JavaScript-->
     <script src="script.js"></script>
+    <script src="style-switcher.js"></script>
   </body>
 </html>
