--- a/Portfolio-1/index.html
+++ b/Portfolio-1/index.html
@@ -33,19 +33,19 @@
         </div>
         <ul class="nav">
           <li>
-            <a href="#" class="active"><i class="fa fa-home"></i>Home</a>
+            <a href="#home" class="active"><i class="fa fa-home"></i>Home</a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-user"></i>About</a>
+            <a href="#about"><i class="fa fa-user"></i>About</a>
           </li>
           <!-- <li>
             <a href="#"><i class="fa fa-list"></i>Services</a>
           </li> -->
           <li>
-            <a href="#"><i class="fa fa-briefcase"></i>Portfolio</a>
+            <a href="#portfolio"><i class="fa fa-briefcase"></i>Portfolio</a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-comments"></i>Contact</a>
+            <a href="#contact"><i class="fa fa-comments"></i>Contact</a>
           </li>
         </ul>
       </div>
@@ -54,7 +54,7 @@
       <!--Start of main content-->
       <div class="main-content">
         <!--Start of home section-->
-        <section class="home section ">
+        <section class="home section " id="home">
           <div class="container">
             <div class="row">
               <div class="home-info padd-15">
@@ -83,7 +83,7 @@
         </section>
         <!--End of home section-->
         <!--About section start-->
-        <section class="about section">
+        <section class="about section" id="about">
           <div class="container">
             <div class="row">
               <div class="section-title padd-15">
@@ -321,7 +321,7 @@
         <!--About section end-->
 
         <!--Portfolio section start-->
-        <section class="portfolio section hidden">
+        <section class="portfolio section hidden" id="portfolio">
           <div class="container">
             <div class="row">
               <div class="section-title padd-15">
@@ -349,7 +349,7 @@
         <!--Portfolio section end-->
 
         <!--Contact section start-->
-        <section class="contact section">
+        <section class="contact section" id="contact">
           <div class="container">
             <div class="row">
               <div class="section-title padd-15">
