--- a/Portfolio-1/index.html
+++ b/Portfolio-1/index.html
@@ -13,12 +13,42 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/color-1.css" />
     <!--Link to style switcher-->
-    <link rel="stylesheet" href="css/color-1.css" class="alternate-style" title="color-1" disabled/>
-    <link rel="stylesheet" href="css/color-2.css" class="alternate-style" title="color-2" disabled/>
-    <link rel="stylesheet" href="css/color-3.css" class="alternate-style" title="color-3" disabled/>
-    <link rel="stylesheet" href="css/color-4.css" class="alternate-style" title="color-4" disabled/>
-    <link rel="stylesheet" href="css/color-5.css" class="alternate-style" title="color-5" disabled/>
-    <link rel="stylesheet" href="css/style-switcher.css">
+    <link
+      rel="stylesheet"
+      href="css/color-1.css"
+      class="alternate-style"
+      title="color-1"
+      disabled
+    />
+    <link
+      rel="stylesheet"
+      href="css/color-2.css"
+      class="alternate-style"
+      title="color-2"
+      disabled
+    />
+    <link
+      rel="stylesheet"
+      href="css/color-3.css"
+      class="alternate-style"
+      title="color-3"
+      disabled
+    />
+    <link
+      rel="stylesheet"
+      href="css/color-4.css"
+      class="alternate-style"
+      title="color-4"
+      disabled
+    />
+    <link
+      rel="stylesheet"
+      href="css/color-5.css"
+      class="alternate-style"
+      title="color-5"
+      disabled
+    />
+    <link rel="stylesheet" href="css/style-switcher.css" />
   </head>
   <body>
     <!--Start of main container-->
@@ -54,7 +84,7 @@
       <!--Start of main content-->
       <div class="main-content">
         <!--Start of home section-->
-        <section class="home section " id="home">
+        <section class="home section" id="home">
           <div class="container">
             <div class="row">
               <div class="home-info padd-15">
@@ -468,6 +498,8 @@
     <!--End of Style Switcher-->
 
     <!--Link to JavaScript-->
+    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+    
     <script src="script.js"></script>
     <script src="style-switcher.js"></script>
     <!--Link to cdnjs-->
