--- a/Portfolio-1/index.html
+++ b/Portfolio-1/index.html
@@ -140,7 +140,7 @@
                   </div>
                 </div>
                 <div class="row">
-                  <div class="personal-info padd-15">
+                  <div class="personal-info">
                     <div class="row">
                       <div class="info-item padd-15">
                         <p>Birthday : <span>09 Dec 1999</span></p>
@@ -242,7 +242,7 @@
                   <div class="education padd-15">
                     <h3 class="title">Education</h3>
                     <div class="row">
-                      <div class="timeline-box padd-15">
+                      <div class="timeline-box">
                         <div class="timeline shadow-dark">
                           <!--Education timeline-->
                           <div class="timeline-item">
@@ -413,6 +413,7 @@
               </div>
               <!--Contact info item end-->
             </div>
+            <br>
             <h3 class="contact-title padd-15">SEND ME AN EMAIL</h3>
             <h4 class="contact-sub-title padd-15">
               I'M VERY RESPONSIVE TO MESSAGES
