--- a/Portfolio-1/index.html
+++ b/Portfolio-1/index.html
@@ -401,7 +401,7 @@
               <div class="contact-info-item padd-15">
                 <div class="icon"><i class="fa fa-envelope"></i></div>
                 <h4>Email</h4>
-                <p>rithurikarabo@gmail.com</p>
+                <p><a href="mailto:rithurikarabo@gmail.com">rithurikarabo@gmail.com</a></p>
               </div>
               <!--Contact info item end-->
 
